# mediagit-core

./: .clippy.toml  .gitattributes  .gitignore  .mcp.json  .rustfmt.toml  ACTIVATION_SUMMARY.md  ARCHITECTURE.md  AUDIT_INDEX.md  AUDIT_README.md  BOOK_GIT_STRATEGY.md  CHANGELOG.md  CHUNKING_ACTIVATION_SUMMARY.md  CLEANUP_SUMMARY.md  CLI_COMMAND_REFERENCE.md  CLI_REFERENCE.md  CLOUD_ARCHITECTURE.md  CODE_OF_CONDUCT.md  COMPLETE_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bench-config  DEVELOPMENT_GUIDE.md  DOCUMENTATION_ACTION_PLAN.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_FIXES_CHECKLIST.md  Dockerfile  FINAL_STATUS_REPORT.md  FUTURE_TODOS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT_TASK_20.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RELEASING.md  STORAGE_OPTIMIZATION_IMPLEMENTATION.md  SUPPORTED_FORMATS.md  TEST1_CHUNKING_SUCCESS.md  UNIMPLEMENTED_FEATURES.md  build_output.txt  build_warnings.txt  (+11 more)
crates/mediagit-cli/: Cargo.toml
crates/mediagit-cli/src/: ignore_rules.rs  lib.rs  main.rs  output.rs  progress.rs  repo.rs
crates/mediagit-cli/src/commands/: add.rs  bisect.rs  branch.rs  cherrypick.rs  clone.rs  commit.rs  diff.rs  fetch.rs  filter.rs  fsck.rs  gc.rs  init.rs  install.rs  log.rs  merge.rs  mod.rs  pull.rs  push.rs  rebase.rs  rebase_state.rs  reflog.rs  remote.rs  reset.rs  revert.rs  show.rs  stash.rs  stats.rs  status.rs  tag.rs  track.rs  (+2 more)
crates/mediagit-cli/tests/: cli_add_test.rs  cli_advanced_test.rs  cli_branch_test.rs  cli_command_tests.rs  cli_commit_test.rs  cli_init_test.rs  cli_integration.rs  cli_maintenance_test.rs  cli_merge_test.rs  cli_rebase_cherrypick_test.rs  cli_reflog_test.rs  cli_remote_test.rs  cli_reset_test.rs  cli_revert_test.rs  cli_stash_test.rs  cli_status_log_test.rs  cli_tag_test.rs  cmd_add_tests.rs  cmd_branch_tests.rs  cmd_commit_tests.rs  cmd_init_tests.rs  cmd_merge_tests.rs  cmd_status_tests.rs  comprehensive_e2e_tests.rs  ignore_integration_test.rs  large_file_test.rs  performance_benchmark_test.rs  progress_test.rs  remote_tests.rs  server_integration_test.rs
crates/mediagit-compression/: Cargo.toml
crates/mediagit-compression/benches/: compression_bench.rs
crates/mediagit-compression/src/: adaptive.rs  brotli_compressor.rs  delta.rs  error.rs  lib.rs  metrics.rs  per_type_compressor.rs  smart_compressor.rs  zlib_compressor.rs  zstd_compressor.rs
crates/mediagit-compression/tests/: integration_tests.rs  proptest_compression.proptest-regressions  proptest_compression.rs
crates/mediagit-config/: Cargo.toml  README.md
crates/mediagit-config/examples/: config.json  config.toml  config.yaml
crates/mediagit-config/src/: error.rs  lib.rs  loader.rs  migration.rs  schema.rs  validation.rs
crates/mediagit-config/tests/: integration_tests.rs
crates/mediagit-git/: Cargo.toml  README.md
crates/mediagit-git/src/: error.rs  filter.rs  lib.rs  pointer.rs
crates/mediagit-git/tests/: integration_test.rs
crates/mediagit-media/: Cargo.toml
crates/mediagit-media/src/: audio.rs  error.rs  image.rs  lib.rs  model3d.rs  phash.rs  psd.rs  strategy.rs  vfx.rs  video.rs
crates/mediagit-media/tests/: media_merge_integration_tests.rs
crates/mediagit-metrics/: Cargo.toml  README.md
crates/mediagit-metrics/benches/: metrics_overhead.rs
crates/mediagit-metrics/src/: collector.rs  lib.rs  registry.rs  server.rs  types.rs
crates/mediagit-metrics/tests/: metrics_test.rs
crates/mediagit-migration/: Cargo.toml
crates/mediagit-migration/src/: lib.rs  state.rs  verify.rs
crates/mediagit-migration/tests/: migration_test.rs
crates/mediagit-observability/: Cargo.toml  README.md
crates/mediagit-observability/examples/: async_tracing.rs  basic_logging.rs
crates/mediagit-observability/src/: config.rs  initialization.rs  lib.rs  macros.rs
crates/mediagit-observability/tests/: integration_tests.rs
crates/mediagit-protocol/: Cargo.toml
crates/mediagit-protocol/src/: adaptive_config.rs  client.rs  lib.rs  streaming.rs  types.rs
crates/mediagit-protocol/tests/: integration_tests.rs
crates/mediagit-security/: Cargo.toml
crates/mediagit-security/benches/: encryption_benchmark.rs
crates/mediagit-security/src/: audit.rs  encryption.rs  kdf.rs  lib.rs
crates/mediagit-security/tests/: security_test.rs
crates/mediagit-server/: Cargo.toml  mediagit-server-production.example.toml  mediagit-server.example.toml
crates/mediagit-server/src/: auth_routes.rs  config.rs  handlers.rs  lib.rs  main.rs  security.rs  state.rs
crates/mediagit-server/tests/: audit_logging_test.rs  auth_integration_test.rs  auth_integration_tests.rs  e2e_backends_test.rs  e2e_incremental_fetch.rs  e2e_push_pull.rs  https_tests.rs  rate_limiting_test.rs  server_tests.rs
crates/mediagit-storage/: Cargo.toml  EMULATOR_STATUS.md  README.md  TESTING.md  docker-compose.yml
crates/mediagit-storage/benches/: cache_bench.rs
crates/mediagit-storage/src/: azure.rs  b2_spaces.rs  cache.rs  error.rs  gcs.rs  lib.rs  local.rs  minio.rs  mock.rs  s3.rs
crates/mediagit-storage/tests/: azure_azurite_tests.rs  gcs_emulator_tests.rs  gcs_integration_tests.rs  minio_docker_tests.rs  mock_backend_unit_tests.rs  s3_localstack_tests.rs
crates/mediagit-test-utils/: Cargo.toml
crates/mediagit-test-utils/src/: assertions.rs  cli.rs  fixtures.rs  lib.rs  platform.rs  repo.rs
crates/mediagit-versioning/: 2025-12-19_performance_optimization.md  Cargo.toml
crates/mediagit-versioning/benches/: branch_bench.rs  merge_bench.rs  odb_bench.rs  pack_benchmark.rs
crates/mediagit-versioning/src/: branch.rs  checkout.rs  chunking.rs  commit.rs  config.rs  conflict.rs  delta.rs  diff.rs  format.rs  fsck.rs  index.rs  lca.rs  lib.rs  merge.rs  metrics.rs  object.rs  odb.rs  oid.rs  pack.rs  reachability.rs  reflog.rs  refs.rs  revision.rs  similarity.rs  streaming_index.rs  streaming_pack.rs  transaction.rs  tree.rs
crates/mediagit-versioning/tests/: PROPTEST_MERGE_STATUS.md  fsck_integration_test.rs  lca_tests.rs  merge_tests.rs  odb_compression_test.rs  proptest_merge.rs.disabled  proptest_odb.rs  week2_integration_test.rs
(+153 files in other folders)
