[workspace]
members = [
    "crates/mediagit-cli",
    "crates/mediagit-storage",
    "crates/mediagit-versioning",
    "crates/mediagit-compression",
    "crates/mediagit-media",
    "crates/mediagit-config",
    "crates/mediagit-observability",
    "crates/mediagit-git",
    "crates/mediagit-security",
    "crates/mediagit-metrics",
    "crates/mediagit-migration", "crates/mediagit-protocol", "crates/mediagit-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.91.0"
license = "AGPL-3.0"
authors = ["MediaGit Contributors"]
repository = "https://github.com/yourusername/mediagit-core"
homepage = "https://mediagit.dev"
documentation = "https://docs.mediagit.dev"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1.83"

# CLI Framework
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9"
toml = { version = "0.8", features = ["preserve_order"] }
bincode = "1.3"

# Error Handling
anyhow = "1.0.95"
thiserror = "2.0.9"

# Hashing
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Compression
zstd = "0.13"
brotli = "7.0"
flate2 = "1.0"

# Parallelization
rayon = "1.10"

# Observability
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "fmt", "ansi", "time"] }
# Updated to 0.14+ to fix RUSTSEC-2024-0437 (protobuf recursion)
prometheus = "0.14"

# Testing
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"
tempfile = "3"

# Time
chrono = { version = "0.4.39", features = ["serde"] }

# AWS SDK (using ring crypto backend to avoid aws-lc-sys build issues on Windows)
aws-config = { version = "1.7", default-features = false, features = ["behavior-version-latest", "rustls"] }
aws-sdk-s3 = { version = "1.66", default-features = false, features = ["behavior-version-latest", "rustls"] }

# Progress & UI
indicatif = "0.17"
console = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Optimized distribution profile (used by cargo-dist)
[profile.dist]
inherits = "release"
lto = "thin"

# cargo-dist configuration for automated releases
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.26.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc"
]
# Additional installers configuration
[workspace.metadata.dist.dependencies.apt]
# System dependencies for Linux builds
cmake = '*'
pkg-config = '*'
libssl-dev = '*'

# GitHub release configuration
[workspace.metadata.dist.github-release]
# Publish prereleases to GitHub
publish-prereleases = false
# Create GitHub releases
create = true
