[package]
name = "mediagit-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Workspace crates
mediagit-config = { path = "../mediagit-config" }
mediagit-storage = { path = "../mediagit-storage" }
mediagit-versioning = { path = "../mediagit-versioning" }
mediagit-compression = { path = "../mediagit-compression" }
mediagit-media = { path = "../mediagit-media" }
mediagit-git = { path = "../mediagit-git" }
mediagit-observability = { path = "../mediagit-observability" }
mediagit-protocol = { path = "../mediagit-protocol" }

# Workspace dependencies
tokio.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true
console.workspace = true
toml.workspace = true
chrono.workspace = true

# Additional dependencies
dialoguer = "0.11"
glob = "0.3"

[[bin]]
name = "mediagit"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile.workspace = true
