[package]
name = "mediagit-compression"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Content-aware compression engine for media objects"

[dependencies]
zstd.workspace = true
brotli.workspace = true
flate2.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "compression_bench"
harness = false

[lints]
workspace = true
