[package]
name = "mediagit-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Image processing and metadata
# Migrated from img_hash 3.2 to image-hasher 1 (maintained fork) to fix:
# - RUSTSEC-2023-0080: transpose 0.1.0 buffer overflow vulnerability
# - RUSTSEC-2025-0056: adler 1.0.2 unmaintained
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "webp"] }
kamadak-exif = "0.6"
image_hasher = "3"

# Video processing
mp4parse = "0.17"

# Audio processing
symphonia = { version = "0.5", features = ["all"] }

# PSD parsing
psd = "0.3.5"

# Serialization for metadata
serde_json.workspace = true

# Regex for metadata parsing
regex-lite = "0.1"

[dev-dependencies]
