[package]
name = "mediagit-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Prometheus metrics and performance monitoring for MediaGit"

[dependencies]
# Workspace crates
mediagit-observability = { path = "../mediagit-observability" }

# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Prometheus metrics
prometheus = { workspace = true, features = ["process"] }

# HTTP server for metrics endpoint
axum = "0.7"
tower = "0.5"
hyper = "1.5"

[dev-dependencies]
tokio-test.workspace = true
criterion.workspace = true
tempfile.workspace = true
reqwest = "0.12"

[[bench]]
name = "metrics_overhead"
harness = false
