[package]
name = "mediagit-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Prometheus metrics and performance monitoring for MediaGit"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Prometheus metrics
prometheus = { workspace = true, features = ["process"] }

# HTTP server for metrics endpoint
axum = { workspace = true }

[dev-dependencies]
criterion.workspace = true
reqwest = "0.12"

[[bench]]
name = "metrics_overhead"
harness = false
