[package]
name = "mediagit-migration"
version = "0.1.0"
edition = "2021"
authors = ["MediaGit Contributors"]
license = "AGPL-3.0-or-later"
description = "Storage backend migration tool for MediaGit"

[dependencies]
# Core dependencies
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

# MediaGit dependencies
mediagit-storage = { path = "../mediagit-storage" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Cryptography for checksums
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
