[package]
name = "mediagit-migration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Storage backend migration tool for MediaGit"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true

# MediaGit dependencies
mediagit-storage = { path = "../mediagit-storage" }

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
