[package]
name = "mediagit-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Structured logging and observability for MediaGit"

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "fmt", "ansi", "time"] }

# Time
chrono.workspace = true

[dev-dependencies]
tokio-test.workspace = true
