[package]
name = "mediagit-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Structured logging and observability for MediaGit"

[dependencies]
# Workspace dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "fmt", "ansi", "time"] }

[dev-dependencies]
