[package]
name = "mediagit-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Protocol-specific dependencies
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# Internal dependencies
mediagit-versioning = { path = "../mediagit-versioning" }

[dev-dependencies]
postcard = { workspace = true }
