[package]
name = "mediagit-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Authentication, encryption, and audit trail"

[dependencies]
# Encryption
aes-gcm = "0.10"

# Key derivation
argon2 = { version = "0.5", features = ["std"] }

# Secret handling and memory security
zeroize = { version = "1.8", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }

# Random number generation
rand = "0.8"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true

# Observability
tracing.workspace = true

# Utilities
hex = { workspace = true, features = ["serde"] }
sha2.workspace = true
chrono.workspace = true

# Authentication (optional)
jsonwebtoken = { version = "10.3", optional = true }
bcrypt = { version = "0.15", optional = true }
uuid = { version = "1.10", features = ["v4", "serde"], optional = true }

# HTTP/Web framework (for middleware)
axum = { workspace = true, optional = true }
http = { version = "1.0", optional = true }

# TLS/Certificate management (optional)
rcgen = { version = "0.13", features = ["pem"], optional = true }
time = { version = "0.3", features = ["macros"], optional = true }

[features]
default = []
auth = ["jsonwebtoken", "bcrypt", "uuid"]
database = []
middleware = ["axum", "http"]
tls = ["rcgen", "time"]
all = ["auth", "database", "middleware", "tls"]

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "encryption_benchmark"
harness = false

[lints]
workspace = true
