[package]
name = "mediagit-test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared test utilities for MediaGit crates"
publish = false

[dependencies]
# Test framework
assert_cmd = "2.0"
predicates = "3.1"
tempfile.workspace = true

# Path handling
dunce = "1.0"

# Async support for server tests
tokio.workspace = true

[lib]
name = "mediagit_test_utils"
path = "src/lib.rs"
