[package]
name = "mediagit-versioning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core VCS engine: ODB, refs, commits, trees, and packs"

[dependencies]
mediagit-storage = { path = "../mediagit-storage" }
mediagit-compression = { path = "../mediagit-compression" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
sha2.workspace = true
hex.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
toml.workspace = true
moka = { version = "0.12.14", features = ["future"] }
uuid = { version = "1.11", features = ["v4"] }
fastcdc = "3.2"
num_cpus = "1.16"
async-channel = "2.3"
divsufsort = "2.0"
sacabase = "2.0"

[dev-dependencies]
proptest.workspace = true
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
tempfile = "3.13"
uuid = { version = "1.11", features = ["v4"] }

[[bench]]
name = "pack_benchmark"
harness = false

[[bench]]
name = "odb_bench"
harness = false

[[bench]]
name = "branch_bench"
harness = false

[[bench]]
name = "merge_bench"
harness = false
